第三版初（2.2）总赛事界面添加学院改成下拉框，但只能单选，列表归属学院显示不出来；赛事届次界面赛事id改成名字，赛事添加改成下拉框，标签和适应学院没改成多选框形式

--- a/RuoYi-Vue-v3.9.1/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/RuoYi-Vue-v3.9.1/ruoyi-admin/src/main/resources/application-druid.yml
@@ -6,7 +6,7 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://localhost:3306/ruoyi?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
+                url: jdbc:mysql://localhost:3306/ry-new?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
                 username: root
                 password: 251016
             # 从库数据源
