（2月6日15:51）赛事届次界面批量导入功能基本完成，总赛事和赛事届次界面导出功能有待完善：字典键值->字典文字

--- a/RuoYi-Vue-v3.9.1/ruoyi-admin/pom.xml
+++ b/RuoYi-Vue-v3.9.1/ruoyi-admin/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>ruoyi-generator</artifactId>
         </dependency>
 
+        <!-- 系统管理模块（新增！必须加，否则找不到字典服务IDictDataService） -->
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-system</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
