用户中心能显示页面

--- a/RuoYi-Vue-v3.9.1/ruoyi-admin/src/main/resources/application.yml
+++ b/RuoYi-Vue-v3.9.1/ruoyi-admin/src/main/resources/application.yml
@@ -134,3 +134,7 @@ xss:
   excludes: /system/notice
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
+  # 微信开放平台配置
+  wechat:
+    appid: appid
+    secret: secret
