--- a/RuoYi-Vue-v3.9.1/ruoyi-system/pom.xml
+++ b/RuoYi-Vue-v3.9.1/ruoyi-system/pom.xml
@@ -7,6 +7,18 @@
         <groupId>com.ruoyi</groupId>
         <version>3.9.1</version>
     </parent>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>10</source>
+                    <target>10</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ruoyi-system</artifactId>
