--- a/RuoYi-Vue-v3.9.1/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/RuoYi-Vue-v3.9.1/ruoyi-admin/src/main/resources/application-druid.yml
@@ -8,7 +8,7 @@ spring:
             master:
                 url: jdbc:mysql://127.0.0.1:13306/ruoyi?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
                 username: root
-                password: cqnuicdio
+                password: 'cqnuicdio'
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
